--- a/src/app/bruno-currency/bruno-currency.component.html
+++ b/src/app/bruno-currency/bruno-currency.component.html
@@ -9,13 +9,15 @@
       <th>Data/Hora</th>
       <th>USD</th>
       <th>EUR</th>
-      <th>GBP</th>
+      <th>BRL</th>
+      <!--<th>GBP</th>-->
     </tr>
-    <tr *ngFor="let price of this.brunoWalletService.updateList">
-      <td>{{ price.timestamp | date: 'full'}}</td>
+    <tr *ngFor="let price of this.brunoWalletService.updateList; index as i">
+      <td>{{ price.timestamp | date: 'full' }}</td>
       <td>{{ price.USD | currency }}</td>
       <td>{{ price.EUR | currency }}</td>
-      <td>{{ price.GBP | currency }}</td>
+      <td>R${{ brunoWalletService.brlBitCoinRates[i]?.bpi.BRL.rate_float }}</td>
+      <!--<td>{{ price.GBP | currency }}</td>-->
     </tr>
   </table>
 </div>
