--- a/src/app/bruno-wallet/bruno-wallet.component.html
+++ b/src/app/bruno-wallet/bruno-wallet.component.html
@@ -1,7 +1,8 @@
 <h3>Minhas Bitcoins: {{ getSaldo() }} un</h3>
-<h5>Real: {{ bitcoinService.getBtcInBRL() }} un</h5>
-<h5>Dólar: {{ bitcoinService.getBtcInUSD() }} un</h5>
+<h5>Real: {{ bitcoinService.getBtcInBRL() }}</h5>
+<!--<h5>Dólar: {{ bitcoinService.getBtcInUSD() }} un</h5>
 <h5>Euro: {{ bitcoinService.getBtcInEUR() }} un</h5>
+-->
 
 <div>Compra de Bitcoin</div>
 <input
